[package]
name = "csview"
version = "1.2.2"
authors = ["Wenxuan Zhang <wenxuangm@gmail.com>"]
description="A high performance csv viewer with cjk/emoji support."
categories = ["command-line-utilities"]
homepage = "https://github.com/wfxr/csview"
keywords = [
    "csv",
    "pager",
    "viewer",
    "tool",
]
readme = "README.md"
license = "MIT OR Apache-2.0"
exclude = ["/completions"]
repository = "https://github.com/wfxr/csview"
edition = "2021"
build = "build.rs"

[dependencies]
csv = "1.2"
clap = { version = "4", features = ["wrap_help", "derive"] }
exitcode = "1.1"
anyhow = "1.0"
unicode-width = "0"
unicode-truncate = "0"
itertools = "0.11"

[build-dependencies]
clap = { version = "4", features = ["wrap_help", "derive"] }
clap_complete = "4"

[profile.release]
lto = true
codegen-units = 1
