[package]
name = "csview"
version = "1.2.4"
authors = ["Wenxuan Zhang <wenxuangm@gmail.com>"]
description = "A high performance csv viewer with cjk/emoji support."
categories = ["command-line-utilities"]
homepage = "https://github.com/wfxr/csview"
keywords = ["csv", "pager", "viewer", "tool"]
readme = "README.md"
license = "MIT OR Apache-2.0"
exclude = ["/completions"]
repository = "https://github.com/wfxr/csview"
edition = "2021"
build = "build.rs"

[features]
default = ["pager"]
pager = ["dep:pager"]

[dependencies]
csv = "1.3"
clap = { version = "4", features = ["wrap_help", "derive"] }
exitcode = "1.1"
anyhow = "1.0"
unicode-width = "0"
unicode-truncate = "0"
itertools = "0.12"
atty = "0.2"
[target.'cfg(target_family = "unix")'.dependencies]
pager = { version = "0.16", optional = true }

[build-dependencies]
clap = { version = "4", features = ["wrap_help", "derive"] }
clap_complete = "4"

[profile.release]
lto = true
codegen-units = 1
